2013-04-19  Zan Dobersek  <zdobersek@igalia.com>

        [Dashboard] The revision rows for aggregate results should no longer include Chromium revisions
        https://bugs.webkit.org/show_bug.cgi?id=114760

        Reviewed by Benjamin Poulain.

        With the Chromium builders no longer present there's no need to display the Chromium revision range under the
        aggregate results. Only the first half of the htmlForRevisionRows method (the one returning the table row listing the
        WebKit revisions) is now relevant - the method is therefor removed and its callsites updated to directly call the
        htmlForTableRow method that returns the table row containing all the relevant WebKit revisions.

        * TestResultServer/static-dashboards/aggregate_results.js:
        (htmlForSummaryTable):
        (htmlForTestType):

2013-04-19  Zan Dobersek  <zdobersek@igalia.com>

        [Dashboard] Remove Chromium-specific cases from the construction of the chart HTML for aggregate results
        https://bugs.webkit.org/show_bug.cgi?id=114759

        Reviewed by Benjamin Poulain.

        Aggregate results are not viewable for Chromium builders anymore, meaning the WebKit revisions are shown by default.
        This means the code in the chartHTML method can be simplified, defaulting the revision key to WEBKIT_REVISIONS_KEY
        and the revision label to 'WebKit Revision'.

        * TestResultServer/static-dashboards/aggregate_results.js:
        (chartHTML):

2013-04-18  Xuefei Ren  <xren@blackberry.com>

        remove build warning(unused parameter)
        https://bugs.webkit.org/show_bug.cgi?id=114670

        Reviewed by Rob Buis.

        remove builde warning (unused parameter) in
        Tools/DumpRenderTree/blackberry

        * DumpRenderTree/blackberry/AccessibilityUIElementBlackBerry.cpp:
        (AccessibilityUIElement::scrollToMakeVisibleWithSubFocus):
        (AccessibilityUIElement::scrollToGlobalPoint):